--- a/afpmobile/pubspec.yaml
+++ b/afpmobile/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.8
+  intl: ^0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -24,4 +25,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
+    - assets/insignia/
     - assets/icons/
