--- a/afpmobile/pubspec.yaml
+++ b/afpmobile/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   intl: ^0.20.2
+  iconify_design: ^1.0.1
 
 dev_dependencies:
   flutter_test:
