--- a/afpmobile/.gitattributes
+++ b/afpmobile/.gitattributes
@@ -1,14 +1,32 @@
-# Automatically normalize text files to LF in the repo
+# Set default behavior to automatically normalize line endings
 * text=auto
 
-# Force LF for common text/code files (good for macOS and Linux tools)
-*.dart text eol=lf
-*.sh text eol=lf
-*.yaml text eol=lf
-*.json text eol=lf
-*.cmake text eol=lf
-*.md text eol=lf
+# Explicitly declare text files you want to always be normalized and converted
+# to native line endings on checkout
+*.dart text
+*.yaml text
+*.yml text
+*.json text
+*.md text
+*.txt text
+*.xml text
+*.html text
+*.css text
+*.js text
+*.ts text
 
-# Optionally, force CRLF for Windows scripts (only if needed)
+# Declare files that will always have CRLF line endings on checkout
 *.bat text eol=crlf
-*.cmd text eol=crlf
+
+# Declare files that will always have LF line endings on checkout
+*.sh text eol=lf
+
+# Denote all files that are truly binary and should not be modified
+*.png binary
+*.jpg binary
+*.jpeg binary
+*.gif binary
+*.ico binary
+*.pdf binary
+*.zip binary
+*.tar.gz binary
