--- a/afpmobile/pubspec.yaml
+++ b/afpmobile/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   intl: ^0.20.2
   iconify_design: ^1.0.1
   http: ^1.1.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -29,3 +30,4 @@ flutter:
   assets:
     - assets/insignia/
     - assets/icons/
+    - .env
