--- a/afpmobile/pubspec.yaml
+++ b/afpmobile/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   iconify_design: ^1.0.1
   http: ^1.1.0
   flutter_dotenv: ^5.1.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
