--- a/afpmobile/pubspec.yaml
+++ b/afpmobile/pubspec.yaml
@@ -16,14 +16,24 @@ dependencies:
   intl: ^0.20.2
   iconify_design: ^1.0.1
   http: ^1.1.0
+  http_parser: ^4.0.2
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.5.3
+  image_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
   flutter_native_splash: ^2.4.6
+  flutter_launcher_icons: ^0.14.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/icons/App_Logo.png
+  adaptive_icon_background: "#FFFFFF"
+  adaptive_icon_foreground: assets/icons/App_Logo.png
 
 # The following section is specific to Flutter packages.
 flutter:
