--- a/afpmobile/pubspec.yaml
+++ b/afpmobile/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   shared_preferences: ^2.5.3
   image_picker: ^1.0.7
+  file_picker: ^8.0.0+1
 
 dev_dependencies:
   flutter_test:
