Replace app launcher icon with AFProTrack logo
- Update pubspec.yaml to use AFProTrack_Logo.png instead of App_Logo.png
- Regenerate launcher icons for all Android screen densities
- Create adaptive icon configuration with white background
- Rebuild APK with new professional AFProTrack branding
- Generate both universal and architecture-specific APK files
- Maintain adaptive icon support for modern Android devices

--- a/afpmobile/pubspec.yaml
+++ b/afpmobile/pubspec.yaml
@@ -29,12 +29,12 @@ dev_dependencies:
   flutter_native_splash: ^2.4.6
   flutter_launcher_icons: ^0.14.1
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: true
-  image_path: assets/icons/App_Logo.png
+  image_path: assets/icons/AFProTrack_Logo.png
   adaptive_icon_background: "#FFFFFF"
-  adaptive_icon_foreground: assets/icons/App_Logo.png
+  adaptive_icon_foreground: assets/icons/AFProTrack_Logo.png
 
 # The following section is specific to Flutter packages.
 flutter:
